--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.21.15",
     "@clerk/themes": "^1.7.5",
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-select": "^1.2.2",
@@ -39,6 +40,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-responsive-modal": "^6.4.2",
+    "react-share": "^5.0.3",
     "svix": "^1.7.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.4.1",
